--- a/src/main/resources/templates/chat.html
+++ b/src/main/resources/templates/chat.html
@@ -9,12 +9,20 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </head>
+<style>
+    body, html {
+    background: url('https://coolbackgrounds.io/images/backgrounds/index/ranger-4df6c1b6.png');
+    background-position: center;
+    background-size: cover;
+    height: 100%;
+    }
+</style>
 <body class="">
 
-<nav class="navbar navbar-dark bg-dark">
+<nav class="navbar navbar-dark bg-primary">
         <span class="navbar-brand">Chat Room</span>
         <div class="form-inline mr-sm-2">
-            <a class="btn btn-outline-primary" th:href="@{/}">
+            <a class="btn btn-outline-light" th:href="@{/}">
                 <i class="material-icons">exit_to_app</i>
             </a>
         </div>
@@ -25,23 +33,24 @@
             <div class="col-xs-12 col-sm-6">
                 <div class="col-xs-12 col-sm-10">
                     <div class="row mt-3 mb-2">
-                        <i class="icon">Welcome：</i>
-                        <i class="icon" id="username" th:text="${username}"></i>
+                        <h4 class="">Welcome：
+                        <span class="" id="username" th:text="${username}"></span>
+                        </h4>
                     </div>
                 </div>
                 <div class="col-sm-12 col-sm-10">
                     <div class="form-group row">
-                        <i class="icon material-icons btn-outline-primary">textsms</i>
+                        <i class="icon material-icons btn-outline-info">textsms</i>
                         <label class="col-sm-2 col-form-label">Send</label>
                         <div class="col-sm-10">
                         <input class="form-control" id="msg"/>
                         </div>
                     </div>
                     <div class="container" style="padding:20px 35px">
-                        <button class="btn btn-primary"
+                        <button class="btn btn-info"
                                 onclick="sendMsgToServer()">Send
                         </button>
-                        <button class="btn btn-danger"
+                        <button class="btn btn-secondary"
                                 onclick="clearMsg()">Clear
                         </button>
                     </div>
@@ -49,14 +58,14 @@
             </div>
 
             <div class="col-xs-6 col-sm-5" style="padding:10px 0">
-                <div class="badge badge-secondary">
-                    <span class="badge badge-primary">
+                <div class="badge badge-info">
+                    <span class="badge badge-light">
                         <i class="material-icons">&#xe420;</i></span>
                     <span class="label">Content</span>
                 </div>
 
-                <div class="badge badge-secondary">
-                    <span class="badge badge-primary">
+                <div class="badge badge-info">
+                    <span class="badge badge-light">
                         <i class="material-icons">face</i></span>
                     <span class="label">Online Users  <span class="chat-num badge badge-primary"></span></span>
 
@@ -84,15 +93,16 @@
             var $messageContainer = $('.message-container');
             if (message.type === 'SPEAK') {
                 $messageContainer.append(
-                    '<div class="card" style="margin: 10px 0;">' +
-                    '<div class="card-body"> <h5 class="card-title">' + message.username + '：</h5> <p class="card-text">' + message.msg + '</p></div>' +
+                    '<div class="card bg-light mt-3">' +
+                    '<div class="card-body">' +
+                    '<div class="row ml-3" ><h5 class="card-title col-xs-4">' + message.username + '：</h5> <p class="card-text col-xs-6">' + message.msg + '</p></div></div>' +
                     '</div></div>');
             }
             $('.chat-num').text(message.onlineCount);
             var $cards = $messageContainer.children('.card:visible').toArray();
-            if ($cards.length > 4) {
+            if ($cards.length > 5) {
                 $cards.forEach(function (item, index) {
-                    index < $cards.length - 4 && $(item).slideUp('fast');
+                    index < $cards.length - 5 && $(item).slideUp('fast');
                 });
             }
         };
