--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -140,7 +140,7 @@
 <body>
 <div class="logo_box">
     <h3>Chat Room</h3>
-    <form>
+    <form action="/home" id="login_form">
         <div class="input_outer">
             <span class="u_user"></span>
             <input id="username" name="username" class="text" type="text" placeholder="Username" autocomplete="off">
@@ -154,8 +154,7 @@
 <script>
 
     function login() {
-        var username = document.getElementById("username").value;
-        window.location.href = "home?username=" + username;
+        document.getElementById("login_form").submit();
     }
 
 
